# loxx-core

./: CMakeLists.txt  MIGRATION_CHECKLIST.md  MIGRATION_TO_MULTIREPO.md  README.md
.github/workflows/: release-ios.yml
converter/: CMakeLists.txt
converter/src/: main.cpp  pbf_reader.cpp
core/: CMakeLists.txt
core/examples/: generator  generator.cpp  route_demo.cpp  test.routingdb
core/include/routing_core/: profile.h  router.h  tile_store.h  tile_view.h  tiler.h
core/src/: router.cpp  tile_store.cpp
docs/: it_1_task_1.md  it_1_task_2.md  it_1_task_3.md  main_spec.md  plan.md
scripts/: build-ios-framework.sh
